<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dk.bonnicksens.birkb.bibelquiz.ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fadeScrollbars="false"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textContactTitle"
                android:text="@string/contact_title"
                android:id="@+id/textView"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textContactText"
                android:text="@string/contact_info"
                android:id="@+id/textView4"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/std_margin"
                android:layout_marginBottom="@dimen/std_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textContactTextBold"
                android:text="@string/contact_question"
                android:id="@+id/textView2"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/std_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textContactText"
                android:text="@string/contact_question2"
                android:id="@+id/textView5"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_button_mcq"
                    android:id="@+id/buttonMCQ"
                    android:layout_marginTop="@dimen/std_margin"
                    android:layout_marginBottom="@dimen/std_margin"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_button_tfq"
                    android:id="@+id/buttonTFQ"
                    android:layout_marginTop="@dimen/std_margin"
                    android:layout_marginBottom="@dimen/std_margin"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_button_maq"
                    android:id="@+id/buttonMAQ"
                    android:layout_marginTop="@dimen/std_margin"
                    android:layout_marginBottom="@dimen/std_margin" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_button_sq"
                    android:id="@+id/buttonSQ"
                    android:layout_marginTop="@dimen/std_margin"
                    android:layout_marginBottom="@dimen/std_margin"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textContactTextBold"
                android:text="@string/contact_contact"
                android:id="@+id/textView3"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/std_margin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_button_contact"
                android:id="@+id/buttonContact"
                android:layout_marginTop="@dimen/std_margin"
                android:layout_marginBottom="@dimen/std_margin"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
