<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dk.bonnicksens.birkb.bibelquiz.PreparingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/textPreparingTitle"
        android:text="@string/preparing_text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/std_margin"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/buttonStart"
        android:fadeScrollbars="false"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textPreparingOptions"
                android:text="@string/preparing_numberOfQuestions"
                android:id="@+id/textView2"
                android:layout_marginBottom="@dimen/std_margin"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerNumberOfQuestions"
                android:spinnerMode="dropdown"
                style="@style/spinner"
                android:popupBackground="@drawable/shape_spinner_dropdown"
                android:layout_marginBottom="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textPreparingOptions"
                android:text="@string/preparing_help"
                android:id="@+id/textView3"
                android:layout_marginTop="@dimen/std_margin"
                android:layout_marginBottom="@dimen/std_margin"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preparing_help_on"
                android:textOn="@string/preparing_help_on"
                android:textOff="@string/preparing_help_off"
                android:id="@+id/toggleButtonHelp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preparing_button_start"
        android:id="@+id/buttonStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
