<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dk.bonnicksens.birkb.bibelquiz.ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/textResultTitle"
        android:text="@string/result_title"
        android:id="@+id/textViewTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="@string/result_numberOfQuestions"
                android:id="@+id/textView1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="--"
                android:id="@+id/textViewQuestionsCorrect"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="/"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="--"
                android:id="@+id/textViewQuestionsTotal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="="
                android:id="@+id/textView5"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="--"
                android:id="@+id/textViewQuestionsPercentage"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="%"
                android:id="@+id/textView7" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="@string/result_numberOfPoints"
                android:id="@+id/textView9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="--"
                android:id="@+id/textViewPointsCorrect"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="/"
                android:id="@+id/textView12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="--"
                android:id="@+id/textViewPointsTotal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="="
                android:id="@+id/textView14"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="--"
                android:id="@+id/textViewPointsPercentage"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="%"
                android:id="@+id/textView16" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfoBold"
                android:text="@string/result_total"
                android:id="@+id/textView11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfoBold"
                android:text="--"
                android:id="@+id/textViewTotalPercentage"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfoBold"
                android:text="%"
                android:id="@+id/textView20" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="@string/result_time"
                android:id="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textResultInfo"
                android:text="00:00:00"
                android:id="@+id/textViewTime"
                android:layout_marginLeft="@dimen/std_margin"
                android:layout_marginStart="@dimen/std_margin"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_button_main"
        android:id="@+id/buttonMain"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
