<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dk.bonnicksens.birkb.bibelquiz.SequenceQuestionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:fillViewport="true"
        android:fadeScrollbars="false"
        android:layout_marginBottom="@dimen/std_margin"
        android:layout_above="@+id/buttonValidate">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textQuestionTitle"
                android:text="Place holder question"
                android:id="@+id/textViewQuestion"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textQuestionTitle2"
                android:text="Place holder question 2"
                android:id="@+id/textViewQuestion2"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/linearLayoutAnswers">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textQuestionNumber"
            android:text="@string/question_text_questionnb"
            android:id="@+id/textView15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textQuestionNumber"
            android:text="00"
            android:id="@+id/textViewNumber"
            android:layout_marginLeft="@dimen/std_margin"
            android:layout_marginStart="@dimen/std_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textQuestionNumber"
            android:text="/"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/textQuestionNumber"
            android:text="00"
            android:id="@+id/textViewTotal" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_button_validate"
        android:id="@+id/buttonValidate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/std_margin"
        android:layout_marginStart="@dimen/std_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_help"
        android:id="@+id/buttonHelp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonValidate"
        android:layout_toStartOf="@+id/buttonValidate"
        android:layout_marginRight="@dimen/std_margin"
        android:layout_marginEnd="@dimen/std_margin"/>
</RelativeLayout>